--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -23,10 +23,10 @@ body {
   display: flex;
   align-items: center;
   background-image: linear-gradient(
-          135deg,
-          rgb(24, 42, 115) 0%,
-          rgb(33, 138, 174) 69%,
-          rgb(32, 167, 172) 89%
+    135deg,
+    rgb(24, 42, 115) 0%,
+    rgb(33, 138, 174) 69%,
+    rgb(32, 167, 172) 89%
   ) !important;
   height: 100vh;
 }
@@ -44,6 +44,10 @@ body {
 .masthead h2 {
   font-size: 1.7em;
   font-weight: normal;
+}
+
+.react-datepicker-wrapper {
+  width: 100%;
 }
 
 /*end home page styles*/
